# ai-code-filter

./: .gitattributes  MANIFEST.sha256  README.md  ai_code_filter_v38_fixes.json  ai_code_filter_v38_fixes.md  ai_code_filter_v39_fixes.json  ai_code_filter_v39_fixes.md  ai_code_filter_v40_finding_core.json  ai_code_filter_v40_finding_core.md  ai_code_filter_v41_pipeline_profiles_governance.json  ai_code_filter_v41_pipeline_profiles_governance.md  ai_code_filter_v43_cross_file_precision.json  ai_code_filter_v43_cross_file_precision.md  ai_code_filter_v44_keyword_binding_precision.json  ai_code_filter_v44_keyword_binding_precision.md  ai_code_filter_v45_variadic_binding_reference.md  ai_code_filter_v46_default_argument_binding.json  ai_code_filter_v46_default_argument_binding.md  ai_code_filter_v47_db_consistency.json  ai_code_filter_v47_db_consistency.md  ai_code_filter_v49_semantic_pytest_completeness.json  ai_code_filter_v49_semantic_pytest_completeness.md  ai_code_filter_v50_behavior_audit.json  ai_code_filter_v50_behavior_audit.md  ai_code_filter_v51_call_graph_core.json  ai_code_filter_v51_call_graph_core.md  ai_filter.py  pyproject.toml
ai_code_filter/: __init__.py  adversarial.py  array_ambiguity.py  artifacts.py  baseline_contract.py  behavior_audit.py  benchmarks.py  blindspots.py  changed_files_audit.py  ci_profiles.py  claim_evidence_contract.py  claim_summary_verification.py  cli.py  compatibility_audit.py  config.py  config_contract.py  coverage.py  coverage_audit.py  dashboard.py  db_consistency.py  dependency_audit.py  deployment_audit.py  docker_sandbox.py  (+50 more)
(+147 files in other folders)
