[project]
name = "ai-code-filter-refactored"
version = "0.59.0"
description = "Layered deterministic code audit CLI with release, CI and evidence gates"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ai = ["openai>=1.0.0"]

[project.scripts]
ai-code-filter = "ai_code_filter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:ddtrace -p no:pytest_jsonreport -p no:metadata -p no:cov"
